# SolMuseum

./: .gitignore  .readthedocs.yaml  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  publish-to-pypi.yml  run-tests.yml
SolMuseum/: __init__.py  module_generator.py  util.py
SolMuseum/ae/: __init__.py  eps_network.py  ies.py
SolMuseum/dae/: __init__.py  battery_gfm.py  gas_network.py  gt.py  heat_network.py  pv.py  st.py  synmach.py
SolMuseum/dae/test/: test_battery_gfm.py  test_gas_network_fault_loopeqn.py  test_gt.py  test_provenance.py  test_pv.py  test_st.py  test_syn.py
SolMuseum/num_api/: __init__.py
SolMuseum/num_api/pde/: __init__.py  minmod_limiter.py  num_api_kt1.py  num_api_weno3.py
SolMuseum/num_api/pde/gas/: __init__.py  num_api_weno3.py
SolMuseum/num_api/pde/heat/: __init__.py  num_api_kt1.py  num_api_kt2.py
SolMuseum/num_api/pde/test/: test_minmod.py
SolMuseum/pde/: __init__.py  basic.py  cdm_broken.py  cha_broken.py  euler_broken.py  firstorder_broken.py  kt1_broken.py  ngs_pipe.py  transform.py  util.py  weno3_broken.py
SolMuseum/pde/gas/: __init__.py  cha_broken.py  kt2_broken.py  ngs_pipe.py  util.py  weno3_broken.py
SolMuseum/pde/gas/broken_pipe/: __init__.py  broken_ngs_pipe.py  cdm_broken.py  cha_broken.py  (+5 more)
SolMuseum/pde/heat/: __init__.py  heat_pipe.py  heat_pipe_loop.py  util.py
SolMuseum/pde/kt1/: kt1_pipe.py
SolMuseum/pde/weno3/: weno_pipe.py
docs/source/: conf.py  index.rst
docs/source/ae/: index.rst
docs/source/dae/: battery_gfm.rst  index.rst
docs/source/pde/: index.rst
(+37 files in other folders)
