[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "SolMuseum/_version.py"

[tool.pytest.ini_options]
addopts = "-vv -n auto"

[project]
name = "SolMuseum"
dynamic = ["version"]
dependencies = [
    "Solverz"
]
authors = [
    { name = "Ruizhi Yu", email = "rz.yu@foxmail.com" },
]
description = "A simulation modelling language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/smallbunnies/SolMuseum"
Issues = "https://github.com/smallbunnies/SolMuseum/issues"
